# prompt-manager

./: .gitignore  README.md  pyproject.toml
prompt_manager/: __init__.py  __main__.py  codex_schema.py  codex_transcript.py  db.py  sync.py  tui.py
prompt_manager/parsers/: __init__.py  aider.py  amp.py  claude_code.py  codex.py  cursor.py  gemini_cli.py
tests/: test_codex_transcript.py  test_db.py  test_parsers.py  test_sync.py
