[project]
name = "prompt-manager"
version = "0.1.0"
description = "A tool for managing and reusing prompts from Code Agent logs"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.0.0",
    "textual>=0.47.0",
    "pyperclip>=1.8.0",
]

[project.scripts]
prompt-manager = "prompt_manager.__main__:main"
pm = "prompt_manager.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["prompt_manager"]
